2007-06-20  Alex Roitman  <shura@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: Correctly regenerate.
	* src/DbManager.py (__rcs): Typo.

2007-06-20  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: Handle more advanced RCS commands, such as
	rename revisions, checking out a new revision, and breaking locks
	* src/glade/gramps.glade: fix window positioning

2007-06-20  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_RelationshipPathBetween.py
	(apply_filter): Object/handle mixup, #1090.

2007-06-19  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.dtd: Typo.
	* src/DbManager.py (check_in): Add -f option to ci to force
	checking even if it is identical; fix -t option;
	(find_revisions): get the date from rlog;
	(__populate): Use date and comment, not rcs version numbers.
	(__button_press): Fix double-click handling.

2007-06-19  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle RCS init properly, don't use gziped files
	* src/GrampsDbUtils/_WriteXML.py: pass compress argument properly

2007-06-19  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_FilterEditor.py (_find_dependent_filters):
	Add method to first find all filters fo deletion.

2007-06-19  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: parse comment for display in list
	* src/glade/gramps.glade: fix names of buttons on dbmanager

2007-06-19  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_FilterEditor.py (_do_delete_filter): Use a
	copy for iteration over the filters.

2007-06-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	  Fix death source reference.

2007-06-18  Brian Matherly  <brian@gramps-project.org>
	* src/DbManager.py: make path recursive. Make default db dir consistent.

2007-06-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py: revision control check in